# Panini

./: README.md  banned_apps.json  index.html  pyproject.toml  script.js  slack_apps.json  style.css
.github/workflows/: update_slack_apps.yml
banned_apps/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
banned_apps/migrations/: 0001_initial.py
panini/: __init__.py  admin.py  apps.py  urls.py  views.py
panini/templates/panini/: panini.html
scripts/: requirements.txt  update_slack_apps.py
static/panani/: panini.js
